Fin - proyecto con SSR

--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,13 @@
   "projects": {
     "pokemon-ssr": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "standalone": true,
+          "changeDetection": "OnPush",
+          "style": "scss"
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
